# finalyzer

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  claude-code-review.yml
backend/: __init__.py  config.py  debug_uber_query.py  debug_uber_query2.py  debug_uber_query3.py  debug_uber_query4.py  main.py  models.py
backend/db/: __init__.py  sqlite.py  vector.py
backend/parsers/: __init__.py  amex_csv.py  amex_year_end_pdf.py  chase_csv.py  chase_pdf.py  chase_report_pdf.py  coinbase_csv.py  coinbase_pdf.py  document_types.py  generic.py  llm_client.py  validation.py
backend/services/: __init__.py  categorizer.py  dedup.py  insights.py  progress.py  query_engine.py  tagger.py  upload.py
backend/tests/: test_amex_csv_parser.py  test_amex_year_end_parser.py  test_generic_parser.py  test_insights.py  test_parser_comparison.py  test_query_engine.py  test_tagger.py  test_validation.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: Navigation.tsx  RecentUploads.tsx  StatsOverview.tsx  TransactionTable.tsx  UploadZone.tsx
frontend/contexts/: PrivacyContext.tsx
frontend/hooks/: useUploadProgress.ts
frontend/lib/: api.ts
